# lab2-bltpzdc

app/: .gitignore  CMakeLists.txt  compose.yml  init-texts.py
app/aggregator/: aggregators.hpp  main.cpp
app/common/: constants.hpp  messages.hpp  rabbitmq.hpp
app/loader/: CMakeLists.txt  main.cpp
app/postgres/: init-db.sql
app/sinker/: main.cpp
app/splitter/: main.cpp
app/texts/: alice_in_wonderland.txt  philosophy_essay.txt  science_article.txt
app/worker/: handlers.hpp  main.cpp
